# learn-iot

./: .editorconfig  .gitattributes  .gitignore  README_ADVANCED.md  SASL_AUTH_AND_KV_Review.md  WASM_QUALITY_FILTER_IMPLEMENTATION.md  aio_portal_setup.md  an_example_run.md  az-up.md  bugfix.md  copilot-instructions.md  device_simulator.py  environment.yaml  feedback.md  iot_sending_device.md  pyproject.toml  readme.md  separation_of_concerns.md  simulating devices.py  troubleshoot.md
.github/: copilot-instructions.md
iotopps/wasm-quality-filter/: .github-workflow-test.md  Cargo.toml  Dockerfile  README.md  RUST_VERSION_FIX.md  build-container.bat  build-container.sh  build.bat  build.sh  config.toml  deployment.yaml  test.bat  test.sh
iotopps/wasm-quality-filter/mqtt-processor/: Cargo.toml
iotopps/wasm-quality-filter/mqtt-processor/src/: config.rs  health.rs  main.rs  metrics.rs  wasm_runtime.rs
iotopps/wasm-quality-filter/src/: filter_logic.rs  lib.rs  message_parser.rs
modules/lerobot-follower/: app.py  local_config.yaml  pyproject.toml  readme.md
modules/lerobot-follower/scripts/: 01_find_com_port.md  01_find_serial_port.sh  02_setup_motors_follower.py  03_calibrate_follower.py  04_check_calibration.py
modules/lerobot-leader/: app.py  lerobot-leader.md  local_config.yaml  pyproject.toml  pyproject.upstream.toml  readme.md  requirements-edge.upstream.txt
modules/lerobot-leader/calibration/: my_awesome_leader_arm.json
modules/lerobot-leader/scripts/: 01_find_com_port.md  02_setup_motors_leader.py  03_calibrate_leader.py  04_check_calibration.py
modules/lerobot-leader/src/lerobot_edge/: constants.py
modules/lerobot-leader/src/lerobot_edge/cameras/opencv/: __init__.py  camera_opencv.py  configuration_opencv.py
modules/lerobot-leader/src/lerobot_edge/cameras/reachy2_camera/: __init__.py  reachy2_camera.py
modules/lerobot-leader/src/lerobot_edge/cameras/realsense/: __init__.py  camera_realsense.py
modules/lerobot-leader/src/lerobot_edge/motors/: __init__.py  calibration_gui.py  motors_bus.py
modules/lerobot-leader/src/lerobot_edge/motors/dynamixel/: __init__.py
modules/lerobot-leader/src/lerobot_edge/robots/: __init__.py
modules/lerobot-leader/src/lerobot_edge/robots/bi_so100_follower/: bi_so100_follower.py
modules/lerobot-leader/src/lerobot_edge/robots/hope_jr/: hope_jr_arm.py
modules/lerobot-leader/src/lerobot_edge/robots/koch_follower/: __init__.py
modules/lerobot-leader/src/lerobot_edge/robots/lekiwi/: config_lekiwi.py
modules/lerobot-leader/src/lerobot_edge/robots/so100_follower/: __init__.py  so100_follower.py
modules/lerobot-leader/src/lerobot_edge/robots/so101_follower/: so101_follower.py
modules/lerobot-leader/src/lerobot_edge/teleoperators/: teleoperator.py  utils.py
modules/lerobot-src/: pyproject.toml
modules/lerobot-src/lerobot_edge/: __version__.py  errors.py  find_cameras.py  find_port.py
modules/lerobot-src/lerobot_edge/cameras/: camera.py  utils.py
modules/lerobot-src/lerobot_edge/cameras/reachy2_camera/: configuration_reachy2_camera.py
modules/lerobot-src/lerobot_edge/cameras/realsense/: configuration_realsense.py
modules/lerobot-src/lerobot_edge/motors/dynamixel/: dynamixel.py  tables.py
modules/lerobot-src/lerobot_edge/motors/feetech/: __init__.py  feetech.py  tables.py
modules/lerobot-src/lerobot_edge/robots/: config.py  robot.py  utils.py
modules/lerobot-src/lerobot_edge/robots/bi_so100_follower/: __init__.py  config_bi_so100_follower.py
modules/lerobot-src/lerobot_edge/robots/hope_jr/: __init__.py  config_hope_jr.py  hope_jr_hand.py
modules/lerobot-src/lerobot_edge/robots/koch_follower/: config_koch_follower.py  koch_follower.py
modules/lerobot-src/lerobot_edge/robots/lekiwi/: __init__.py  lekiwi.py  lekiwi_client.py  lekiwi_host.py
modules/lerobot-src/lerobot_edge/robots/reachy2/: __init__.py  configuration_reachy2.py  robot_reachy2.py
modules/lerobot-src/lerobot_edge/robots/so100_follower/: config_so100_follower.py  so100_follower_end_effector.py
modules/lerobot-src/lerobot_edge/robots/so101_follower/: config_so101_follower.py
modules/lerobot-src/lerobot_edge/robots/stretch3/: __init__.py
modules/lerobot-src/lerobot_edge/robots/viperx/: config_viperx.py  viperx.py
modules/lerobot-src/lerobot_edge/teleoperators/: __init__.py  config.py
modules/lerobot-src/lerobot_edge/teleoperators/bi_so100_leader/: __init__.py  bi_so100_leader.py
modules/lerobot-src/lerobot_edge/teleoperators/gamepad/: gamepad_utils.py  teleop_gamepad.py
modules/lerobot-src/lerobot_edge/teleoperators/homunculus/: config_homunculus.py  homunculus_arm.py
modules/lerobot-src/lerobot_edge/teleoperators/keyboard/: configuration_keyboard.py
modules/lerobot-src/lerobot_edge/teleoperators/koch_leader/: __init__.py  config_koch_leader.py  koch_leader.py
modules/lerobot-src/lerobot_edge/teleoperators/reachy2_teleoperator/: __init__.py  config_reachy2_teleoperator.py  reachy2_teleoperator.py
modules/lerobot-src/lerobot_edge/teleoperators/so100_leader/: so100_leader.py
modules/lerobot-src/lerobot_edge/teleoperators/so101_leader/: __init__.py  config_so101_leader.py
modules/lerobot-src/lerobot_edge/teleoperators/stretch3_gamepad/: configuration_stretch3.py  stretch3_gamepad.py
modules/lerobot-src/lerobot_edge/teleoperators/widowx/: widowx.py
modules/lerobot-src/lerobot_edge/utils/: utils.py
modules/wasm/wasm-rust/: Build-WasmModule.ps1  Cargo.toml  Dockerfile  README.md  acr-task.yaml  dataflow-graph.yaml  graph.yaml
modules/wasm/wasm-rust/.cargo/: config.toml
modules/wasm/wasm-rust/src/: main.rs  transform.rs
(+317 files in other folders)
