[project]
name = "learn-iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
ui = [
    "textual>=8.0.0",
    "pyinstaller>=6.0.0",
]

# Build the standalone .exe (from repo root, after uv sync --extra ui):
#   uv run --extra ui pyinstaller --distpath . textual/aio_manager.spec
# Output: aio-manager.exe  (placed at the repo root, tracked in git)
