[project]
name = "lerobot-follower"
version = "1.0.0"
description = "Subscribes to AIO-forwarded MQTT joint positions and commands an SO101 follower arm via USB"
requires-python = ">=3.10,<3.12"
dependencies = [
    "lerobot-edge",
    "paho-mqtt>=2.0.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
lerobot-edge = { path = "../lerobot-src" }

# NOTE: feetech-servo-sdk must be installed separately with --no-deps to avoid
# platform-specific dependency conflicts. Run this once before `uv sync`:
#
#   uv pip install feetech-servo-sdk==1.0.0 --no-deps
