[package]
name = "factory_transform_wasm"
version = "0.1.0"
edition = "2021"
description = "WASM data transform module for AIO DataflowGraphs - enriches factory telemetry with OEE metrics"
authors = []
autobins = false   # prevent src/main.rs from being compiled as a binary target

# AIO requires a cdylib (WebAssembly Component Model) built for wasm32-wasip2.
# See .cargo/config.toml for the private AIO Cargo registry that provides
# wasm_graph_sdk.  Build with:
#   cargo build --release --target wasm32-wasip2
# Output: target/wasm32-wasip2/release/factory_transform_wasm.wasm

[lib]
name = "factory_transform_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# AIO DataflowGraph SDK  -- registry defined in .cargo/config.toml
wasm_graph_sdk = { version = "1.1.3", registry = "azure-iot-sdks" }
wit-bindgen = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Minimise binary size for edge deployment
opt-level = "z"        # Optimise for size
lto = true             # Link-time optimisation
codegen-units = 1      # Single codegen unit for better LTO
panic = "abort"        # Remove panic unwinding (saves ~10 KB)
strip = true           # Strip debug symbols
